<resources>
    <string name="app_name">ESC_PrintDemo</string>

    <!-- mainActivity -->
    <string name="btn_buletooth_printer">Bluetooth printing</string>
    <string name="btn_psam">PSAM</string>
    <string name="btn_printer">ESC Printer</string>
    <string name="btn_web_printer">Web Printer</string>

    <!--labelname -->
    <string name="lab_activity_stylesetting">Print style setting</string>
    <string name="lab_activity_demotest">Print demo test</string>
    <string name="lab_activity_miansettings">Print Setting</string>

    <!-- esc Activity -->
    <string name="TXT_version">Firmware version: </string>
    <string name="TXT_psamInfo">PSAM information: </string>
    <string name="TXT_con">浓度: </string>
    <string name="TXT_text">Text</string>
    <string name="TXT_image">Image</string>
    <string name="TXT_barcode">Barcode</string>
    <string name="TXT_qr">QR</string>
    <string name="TXT_mark">Black marker</string>
    <string name="TXT_lable">Label test</string>
    <string name="TXT_check">Printer self-test</string>
    <string name="TXT_psam1">PSAM卡1</string>
    <string name="TXT_psam2">PSAM卡2</string>
    <string name="TXT_html">Web page calling test</string>
    <string name="TXT_mark_enable">Black mark detection switch</string>
    <string name="TXT_reset">Reset printer</string>

    <!-- toast -->
    <string name="toast_print_success">Print success</string>
    <string name="toast_print_error">Print failed</string>
    <string name="toast_high_temperature">high temperature</string>
    <string name="toast_no_paper">No paper</string>
    <string name="toast_check">Please Check picture</string>
    <string name="toast_chick">Please do not click multiple times</string>
    <string name="toast_mark">Please open the black mark first</string>
    <string name="toast_input_content">The content can not be blank</string>
    <string name="toast_con">Concentration cannot be empty</string>

    <string name="rb_open_mark">Open</string>
    <string name="rb_close_mark">Close</string>



    <!-- psam -->
    <string name="po1">PowerON Card1</string>
    <string name="po2">PowerON Card2</string>
    <string name="po3">valid</string>
    <string name="poff">PowerOFF</string>
    <string name="cmd">Send CMD</string>
    <string name="txt_select">Current select card: None</string>
    <string name="txt_active">active card 1 failed, maybe card is not present or some error occured</string>
    <string name="txt_active2">active card 2 failed, maybe card is not present or some error occured</string>
    <string name="txt_success">success get ATR</string>
    <string name="txt_select_card1">Current select card: Card1</string>
    <string name="txt_select_card2">Current select card: Card2</string>
    <string name="txt_invalid_char">Invalid char, cmd shoud formed by HEX number</string>
    <string name="txt_invalid_mApdu">Invalid mApdu, cmd shoud formed by HEX number</string>
    <string name="txt_exec_cmd">exec cmd failed, please retry</string>
    <string name="txt_success_execute">success execute cmd</string>
    <string name="toast_01">Please reset the card first</string>


    <!-- BluetoothFragment -->
    <string name="txt_01">Select a paired printing device</string>
    <string name="txt_02">Have not paired the printer, go to set up</string>
    <string name="txt_03">Test printer connection</string>
    <string name="txt_04">print</string>
    <string name="txt_05">Ticket printing</string>
    <string name="txt_06">Label printing</string>
    <string name="txt_07">Label test</string>
    <string name="txt_08">Bluetooth printer</string>

    <string name="total_01">Pair more devices</string>
    <string name="total_02">Have not paired the printer, go to set up</string>
    <string name="total_03">Please wait for the current printing to complete</string>
    <string name="total_05">No printing device selected</string>
    <string name="total_06">Failed to connect the printer</string>
    <string name="total_07">success!</string>
    <string name="total_08">Bluetooth is on</string>
    <string name="total_09">Bluetooth is off</string>
    <string name="total_10">Please turn on Virtual Bluetooth in Settings-->Personalization</string>

    <string name="dialog_01">Please wait..</string>
    <string name="dialog_02">The Bluetooth device is not turned on, please turn on this function and try again!</string>
    <string name="dialog_03">prompt</string>
    <string name="dialog_04">confirm</string>
    <string name="stylesetting_info">Setting the final output of the printer will cover the Settings of the App for printing effect</string>
    <string name="fontsetting">Font</string>
    <string name="height_double">Font two times high</string>
    <string name="width_double">Font two times width</string>
    <string name="width_double_info">Will affect print output layout ,please use caution</string>
    <string name="other">other</string>
    <string name="font_bold">Font bold</string>
    <string name="reverse">White to black</string>
    <string name="under_line">The underline</string>
    <string name="line_height">Line height</string>
    <string name="height_summary">when the line height is less than</string>
    <string name="setline_height">Set the line height</string>
    <string name="density_select">Density select</string>
    <string name="printer_density">Printer Density</string>
    <string name="demotest_info">Support text image barcode qr label</string>
    <string name="demo_test_string">test string</string>

    <string-array name="conn_key">
        <item>70%</item>
        <item>75%</item>
        <item>80%</item>
        <item>85%</item>
        <item>90%</item>
        <item>95%</item>
        <item>100%</item>
        <item>105%</item>
        <item>110%</item>
        <item>115%</item>
        <item>120%</item>
        <item>125%</item>
        <item>130%</item>
    </string-array>
    <string-array name="conn_value">
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
    </string-array>


</resources>
