<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ESCActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_printer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/color_bg_toolbar"
        app:popupTheme="@style/OverflowMenuStyle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/app_name"
            android:textSize="18sp"
            android:textColor="#ffffff" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_printer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/btn_bg_selected"
            android:text="@string/btn_printer"
            android:textColor="@drawable/btn_textcolor_selected" />

        <Button
            android:id="@+id/btn_bluetooth_printer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/btn_bg_selected"
            android:text="@string/btn_buletooth_printer"
            android:textColor="@drawable/btn_textcolor_selected" />


        <Button
            android:id="@+id/btn_web_printer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            android:text="@string/btn_web_printer"/>

        <Button
            android:id="@+id/btn_psam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:visibility="gone"
            android:background="@drawable/btn_bg_selected"
            android:text="@string/btn_psam"
            android:textColor="@drawable/btn_textcolor_selected" />

    </LinearLayout>



</LinearLayout>