<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_pasm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/color_bg_toolbar"
        app:popupTheme="@style/OverflowMenuStyle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="PSAM"
            android:textSize="18sp"
            android:textColor="#ffffff" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_pasm"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_b"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView_v"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:text="TextView" />

        <EditText
            android:id="@+id/editText_msg"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:ems="10"
            android:inputType="text"
            android:singleLine="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_p1"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:textColor="@color/text_size_color"
                    android:background="@drawable/button_selector"
                    android:text="@string/po1" />

                <Button
                    android:id="@+id/button_p2"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:textColor="@color/text_size_color"
                    android:background="@drawable/button_selector"
                    android:text="@string/po2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button_cmd"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:textColor="@color/text_size_color"
                    android:background="@drawable/button_selector"
                    android:text="@string/cmd" />

                <Button
                    android:id="@+id/button_off"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:textColor="@color/text_size_color"
                    android:background="@drawable/button_selector"
                    android:text="@string/poff" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView_s"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="TextView" />

    </LinearLayout>


</RelativeLayout>